--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
 		<dependency>
 			<groupId>com.github.ulisesbocchio</groupId>
 			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>3.0.3</version>
 		</dependency>
 <!--		provided-->
 		<dependency>
